--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* // You can add global styles to this file, and also import other style files
 body {
     margin: 0;
     display: flex;
@@ -6,7 +6,7 @@ body {
     align-items: center;
     justify-content: center;
     // height: 100vh;
-    // background-color: #ed7878; /* Set your desired background color */
+    // background-color: #ed7878;
     width: 100vw;
     overflow-x: hidden;
-}
+} */
