--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,9 @@
-/* // You can add global styles to this file, and also import other style files
 body {
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    // height: 100vh;
-    // background-color: #ed7878;
     width: 100vw;
     overflow-x: hidden;
-} */
+}
