add login page and session services and update score and navbar

--- a/src/app/components/femme-actions/femme-actions.component.html
+++ b/src/app/components/femme-actions/femme-actions.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="col-md-4 px-1">
-        <div (click)="navigateTo('track')" class="cp action col-md-12 w-100 h-100 p-3 d-flex align-items-center justify-content-center Track">
+        <div (click)="navigateTo('paintrack')" class="cp action col-md-12 w-100 h-100 p-3 d-flex align-items-center justify-content-center Track">
             <h5>Track</h5>
         </div>
     </div>
