--- a/src/app/components/score/score.component.html
+++ b/src/app/components/score/score.component.html
@@ -3,7 +3,10 @@
         <h4>Last score</h4>
         <p>Update your score regularly</p>
     </div>
-    <div class="score-img-container h-80">
+    <div class="score-img-container h-80 position-relative d-flex align-items-center justify-content-center">
         <img src="../../../assets/images/score.png" alt="" height="100">
+        <h5 class="position-absolute">
+            Test
+        </h5>
     </div>
 </div>
