--- a/src/app/components/femme-actions/femme-actions.component.html
+++ b/src/app/components/femme-actions/femme-actions.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12 d-flex row h-100 m-0">
     <div class="col-md-4 px-1">
-        <div (click)="navigateTo('track')" class="cp action rounded-2 col-md-12 w-100 h-100 p-3 d-flex align-items-center justify-content-center DiagnosticTest">
+        <div (click)="navigateTo('diagnostictest')" class="cp action rounded-2 col-md-12 w-100 h-100 p-3 d-flex align-items-center justify-content-center DiagnosticTest">
             <h5>Diagnostic test</h5>
         </div>
     </div>
