--- a/src/app/components/score/score.component.html
+++ b/src/app/components/score/score.component.html
@@ -1,7 +1,7 @@
 <div class="w-100 h-100 p-3 rounded-3 score-container d-flex justify-content-between align-items-center">
     <div class="score-text">
-        <h4>Last score</h4>
-        <p>Update your score regularly</p>
+        <h4>{{"LastScore"|translate}}</h4>
+        <p>{{"LastScoreDesc"|translate}}</p>
     </div>
     <div class="score-img-container h-80 position-relative d-flex align-items-center justify-content-center">
         <img src="../../../assets/images/score.png" alt="" height="100">
