--- a/src/app/pages/femme/pain-track/pain-track.component.html
+++ b/src/app/pages/femme/pain-track/pain-track.component.html
@@ -1,39 +1,46 @@
 <app-header class="nav"></app-header>
-<div class="container w-100 h-h-400 d-flex flex-column align-items-center justify-content-center position-relative">
-    <div class="d-flex h-h-200 position-relative w-100 flex-column align-items-start">
-        <div *ngIf="currentQuestionIndex < questions.length">
-            <h2>{{ questions[currentQuestionIndex].text }}</h2>
-          
-          <!-- Check the question type and display the appropriate input -->
-          <ng-container *ngIf="questions[currentQuestionIndex].type === 'range'; else checkboxSection">
-            <input type="range" min="1" max="10" [(ngModel)]="selectedChoices[currentQuestionIndex]" />
-            <p>{{ selectedChoices[currentQuestionIndex]<1? 'None': selectedChoices[currentQuestionIndex]<4 ? 'Mild': selectedChoices[currentQuestionIndex]<6 ? 'Moderate': selectedChoices[currentQuestionIndex]<8 ?'Sever':selectedChoices[currentQuestionIndex]<10 ? 'Very Severe': 'Worst pain possible' }}</p>
-          </ng-container>
-          
-          <ng-template #checkboxSection>
-            <div *ngFor="let choice of questions[currentQuestionIndex].choices">
-              <input type="checkbox" [(ngModel)]="selectedChoices[currentQuestionIndex][choice]" [value]="choice" />
-              {{ choice }}
+<div class="container w-100 py-5 d-flex flex-column align-items-center justify-content-center position-relative">
+    <div class="d-flex position-relative flex-column align-items-start">
+        <ng-container *ngFor="let question of questions; let i = index">
+            <div class="w-100">
+                <ng-container *ngIf="question.type === 'range'; else checkboxQuestion" class="d-flex">
+                  <h4 (click)="toggleChoices(question)">
+                    {{ question.text }}
+                  </h4>
+                  <p [ngStyle]="{'color': getColorForPainLevel(selectedChoices[i]),'font-weight':'bold'}">
+                    {{ selectedChoices[i] }} {{ getPainDescription(selectedChoices[i]) }}
+                  </p>
+                  <input class="w-100" type="range" min="1" max="10" [(ngModel)]="selectedChoices[i]" />
+                </ng-container>
+                <ng-template #checkboxQuestion class="w-100">
+                  <div class="check">
+                    <h4 class="cp question" (click)="toggleChoices(question)" [ngClass]="{'active': question.displayChoices}">
+                      {{ question.text }}
+                      <span class="arrow">&#9660;</span>
+                    </h4>
+                    <div *ngIf="question.displayChoices">
+                      <div *ngFor="let choice of question.choices; let j= index" class="d-flex align-items-center">
+                          <input id="{{choice}}" type="checkbox" [(ngModel)]="selectedChoices[i][choice]"/>
+                          <label class="mx-2" for="{{choice}}">{{ choice }}</label>
+                      </div>
+                    </div>
+                  </div>
+                </ng-template>
+              
+                <!-- Check the question type and display the appropriate input -->
+                <ng-container *ngIf="question.type === 'range'; else checkboxSection">
+                    
+                </ng-container>
+              
+                <ng-template #checkboxSection class="position-relative">
+                  
+                </ng-template>
             </div>
-          </ng-template>
-          
-          <!-- Navigation buttons -->
-          <button (click)="previousQuestion()" class="position-absolute back-btn">Back</button>
-          <button (click)="nextQuestion()" class="position-absolute next-btn">Next</button>
-          </div>
-          
-          <div class="position-relative" *ngIf="currentQuestionIndex === questions.length">
-            <h2>Review Your Answers</h2>
-            <div *ngFor="let question of questions; let i = index">
-              <p>{{ question.text }}</p>
-              <ul>
-                <li *ngFor="let choice of question.choices">
-                  {{ choice }}: {{ selectedChoices[i][choice] }}
-                </li>
-              </ul>
-            </div>
-            <button (click)="previousQuestion()" class="position-absolute back-btn">Back</button>
-            <button (click)="submitAnswers()" class="position-absolute next-btn">Submit</button>
-          </div>  
+        </ng-container>
+        
+        <div class="w-100 p-0 m-0 d-flex justify-content-between">
+            <button (click)="previousQuestion()" class="rounded my-3 back-btn bg-danger fc-w">Back</button>
+            <button (click)="submitAnswers()" class="rounded my-3 next-btn">Submit</button>
+        </div>  
     </div>
 </div>
