--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -17,9 +17,9 @@
                   </div>
                   <div class="flex flex-row mt-4">
           
-                    <button type="submit" class="btn h-bg-primary"> Connecter </button>
+                    <button type="submit" class="btn h-bg-primary"> {{"LOGIN"|translate}} </button>
           
-                    <span> Vous n'avez pas de compte ? <a routerLink='/register' (click)="navigateTo('/dashboard')" class="cp fc-primary"  > S'incrire </a> </span>
+                    <span> {{"Vous n'avez pas un compte"|translate}} <a routerLink='/register' (click)="navigateTo('newuser')" class="cp fc-primary"  > {{"S'incrire"|translate}} </a> </span>
           
                   </div>
           
