--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,14 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start !important;
     justify-content: center;
     width: 100vw;
     overflow-x: hidden;
+    /* min-height: 600px; */
+    position: absolute;
+    top: 0%;
+    padding: 0 !important;
 }
+/* html, body { height: 100%; } */
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
