--- a/src/app/pages/femme/femme-dashboard/femme-dashboard.component.html
+++ b/src/app/pages/femme/femme-dashboard/femme-dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="w-100 d-flex flex-column align-items-center justify-content-center">
     <div class="container w-100 py-4 row gap-4">
         <div class="col-md-12 d-flex flex-column gap-3">
-            <h3>Hi chakra chaimae</h3>
+            <h3>{{"Hi"|translate}} nisrine</h3>
             <div class="row">
                 <div class="col-md-6">
                     <app-score></app-score>
