--- a/src/app/components/score/score.component.html
+++ b/src/app/components/score/score.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="score-img-container h-80 position-relative d-flex align-items-center justify-content-center">
         <img src="../../../assets/images/score.png" alt="" height="100">
-        <h5 class="position-absolute">
-            Test
+        <h5 class="position-absolute fw-600 fs-16">
+            {{score}}
         </h5>
     </div>
 </div>
