--- a/src/app/pages/femme/femme-dashboard/femme-dashboard.component.html
+++ b/src/app/pages/femme/femme-dashboard/femme-dashboard.component.html
@@ -13,12 +13,22 @@
             </div>
         </div>
         <!-- <canvas options="chartOptions" styles="{width: '100%', height:'360px'}"></canvas> -->
-        <div class="row">
+        <div class="row w-100 d-flex justify-content-between p-0">
             <div class="col-md-6">
-                <canvas id="myChart"></canvas>
+                <div class="card w-100">
+                    <div class="card-body ">
+                        <canvas id="myChart"></canvas>
+                    </div>
+                    </div>   
             </div>  
-            <div class="col-md-6 h-h-250">
-                <canvas id="myChartPie"></canvas>
+            <div class="col-md-6 pr-0 h-h-250">
+                <div class="card pr-0 w-100">
+                    <div class="card-body">
+                        <div class="h-h-250">
+                            <canvas id="myChartPie"></canvas>
+                        </div>
+                    </div>
+                </div>    
             </div>
         </div>
     </div>    
