--- a/src/app/pages/femme/femme-dashboard/femme-dashboard.component.css
+++ b/src/app/pages/femme/femme-dashboard/femme-dashboard.component.css
@@ -1,3 +1,13 @@
 .nav{
     background-color: rgb(128, 191, 218);
 }
+
+.card{
+    border: 0;
+    padding: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.pr-0{
+    padding-right: 0%;
+}
