--- a/src/app/components/blog-card/blog-card.component.html
+++ b/src/app/components/blog-card/blog-card.component.html
@@ -1,12 +1,12 @@
 <div class="col-md-12 mb-4">
     <div class="blog-card d-flex flex-column align-items-center gap-1 p-0 cp">
         <div class="h-100 d-flex p-0 justify-content-center align-items-center blog-img-container position-relative">
-            <p class="position-absolute m-2 start-0 top-0 bg-light rounded-4 p-1 px-2 fs-13 fw-600 fc-g"> 08 Jan </p>
+            <p class="position-absolute m-2 start-0 top-0 bg-light rounded-4 p-1 px-2 fs-13 fw-600 fc-g">{{ i + 1 }} Jan </p>
             <img src="../../../assets/images/heart.jpg" class="blog-img w-100 h-100 top-0 left-0" height="40%">
         </div>
         <div class="h-100 article-text w-100 d-flex flex-column justify-content-center align-items-start">
             <h2 class="article-title">{{title}}</h2>
-            <p class="article-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores atque sequi deleniti aspernatur, debitis sint enim voluptatum impedit corrupti laborum alias sed ad eos doloremque voluptates nesciunt labore neque fuga.</p>
+            <p class="article-description">{{title}} Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores atque sequi deleniti aspernatur, debitis sint enim voluptatum impedit corrupti laborum alias sed ad eos doloremque voluptates nesciunt labore neque fuga.</p>
         </div>
     </div>
 </div>
