--- a/src/app/pages/home/components/left-landing/left-landing.component.html
+++ b/src/app/pages/home/components/left-landing/left-landing.component.html
@@ -6,7 +6,7 @@
     <div class="w-100 d-flex justify-content-start">
         <button
         class="try-btn"
-        (click)="null" 
+        (click)="navigateTo('login')" 
         mat-raised-button>
           {{"tryNow" | translate}} !
         </button>
