--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -68,3 +68,11 @@
 .a3{
     /* background-color: rgb(247, 255, 237); */
 }
+
+footer{
+    background-color: rgb(128, 191, 218);
+}
+
+.about{
+    background-color: #F6F6F6;
+}
