--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -50,5 +50,37 @@
             </div>
         </div>
     </div>
+
+    <div class="about-us-section w-100 mb-5 p-5 about">
+        <div class="container">
+            <div class="row px-5">
+                <div class="col-md-4">
+                    <img src="../../../assets/images/logover.png" width="220" alt="About Us Image" class="img-fluid">
+                </div>
+                <div class="col-md-8 d-flex flex-column justify-content-center">
+                    <h2 class="section-title">About Us</h2>
+                    <p class="section-description">
+                        Pain care is a comprehensive set of care services dedicated to addressing and managing pain. We understand the importance of staying informed about conditions like endometriosis to provide tailored and effective solutions.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer class="footer h-bg-primary text-light py-3 w-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="footer-text m-0">© 2024 Pain Care</p>
+                </div>
+                <div class="col-md-6 text-end">
+                    <span class="footer-link">Privacy Policy</span>
+                    <span class="mx-2">|</span>
+                    <span class="footer-link">Terms of Service</span>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
