--- a/src/app/pages/femme/femme-dashboard/femme-dashboard.component.html
+++ b/src/app/pages/femme/femme-dashboard/femme-dashboard.component.html
@@ -17,7 +17,7 @@
             <div class="col-md-6">
                 <div class="card w-100">
                     <div class="card-body">
-                        <canvas id="myChart"></canvas>
+                        <canvas id="myChart" class="w-100 h-100 canvas"></canvas>
                     </div>
                     </div>   
             </div>  
